--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tiptap/extension-collaboration-cursor": "^2.1.7",
     "@tiptap/extension-image": "^2.1.7",
     "@tiptap/extension-link": "^2.1.7",
+    "@tiptap/extension-mention": "^2.1.8",
     "@tiptap/extension-task-item": "^2.1.7",
     "@tiptap/extension-task-list": "^2.1.7",
     "@tiptap/extension-typography": "^2.1.7",
